se agrega mejoras recomendadas de wave

--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,14 @@
     <!-- Navbar-->
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
-            <a class="navbar-brand fw-bold py-2" href="./index.html">Vive con Propósito</a>
+            <a class="navbar-brand fw-bold py-2" href="./index.html"><h1>Vive con Propósito</h1></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navPrincipal"
                 aria-controls="navPrincipal" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navPrincipal">
                 <ul class="navbar-nav ms-auto ">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html#">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="./index.html#nosotros">Sobre nosotros</a></li>
                     <li class="nav-item"><a class="nav-link" href="./index.html#recursos">Recursos</a></li>
                     <li class="nav-item"><a class="nav-link" href="./index.html#proyectos">Proyectos</a></li>
@@ -46,7 +46,7 @@
                             un impacto real en el mundo.</p>
                         <div class="grid-section">
                             <a href="#recursos" class="btn btn-primary btn-lg me-3">Empieza ahora gratis</a>
-                            <a href="./contactos.html" class="btn btn-outline-light btn-lg">Únete a la comunidad</a>
+                            <a href="#" class="btn btn-outline-light btn-lg">Únete a la comunidad</a>
                         </div>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
             <div class="container">
                 <div class="row justify-content-center align-items-center g-4">
                     <div class="col-lg-10 col-md-10 text-center text-lg-start">
-                        <h3 class="fw-semibold pregunta">¿Qué es vive con propósito?</h2>
+                        <h2 class="fw-semibold pregunta">¿Qué es vive con propósito?</h2>
                             <p class="lead">Vive con propósito nace de una inspiración de un equipo de personas que
                                 vieron la necesidad de conectar personas con necesidades de enfoque y grupos de ayuda o
                                 comunidades con causas sociales afines, formando una red de apoyo para los que
@@ -68,7 +68,7 @@
                 </div>
                 <div class="row justify-content-center align-items-center g-4">
                     <div class="col-lg-10 col-md-10 text-center text-lg-start">
-                        <h3 class="fw-semibold pregunta">¿Cuál es nuestra misión?</h2>
+                        <h2 class="fw-semibold pregunta">¿Cuál es nuestra misión?</h2>
                             <p class="lead">
                                 “Inspirar y educar a las personas para vivir de manera más consciente, enfocada en el
                                 desarrollo personal, apoyo a causas sociales y bienestar comunitario.”
@@ -86,7 +86,7 @@
                     <div class="col-md-4">
                         <div class="card recurso-card-hover  h-100">
                             <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">Workbook: Descubre tu propósito</h5>
+                                <h3 class="card-title">Workbook: Descubre tu propósito</h3>
                                 <p class="card-text">20 páginas de ejercicios prácticos para encontrar la intersección
                                     entre lo que amas, lo que el mundo necesita y lo que puedes monetizar.</p>
                                 <a href="#" class="btn btn-outline-primary mt-auto">Descargar gratis →</a>
@@ -96,7 +96,7 @@
                     <div class="col-md-4">
                         <div class="card recurso-card-hover h-100">
                             <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">Reto: 30 días con intención</h5>
+                                <h3 class="card-title">Reto: 30 días con intención</h3>
                                 <p class="card-text">Un hábito diario sencillo para alinear tu rutina con tus valores
                                     más profundos.</p>
                                 <a href="#" class="btn btn-outline-primary mt-auto">Unirme al reto →</a>
@@ -106,7 +106,7 @@
                     <div class="col-md-4">
                         <div class="card recurso-card-hover h-100">
                             <div class="card-body d-flex flex-column">
-                                <h5 class="card-title">Test: ¿Cuál es tu arquetipo de propósito?</h5>
+                                <h3 class="card-title">Test: ¿Cuál es tu arquetipo de propósito?</h3>
                                 <p class="card-text">Descubre en 5 minutos qué tipo de impacto estás llamado a generar.
                                 </p>
                                 <a href="#" class="btn btn-outline-primary mt-auto">Hacer el test →</a>
@@ -128,28 +128,28 @@
                         proyecto-card">
                             <i class="bi bi-globe-americas"></i>
                         </div>
-                        <h5>30 días sin plástico</h5>
+                        <h3>30 días sin plástico</h3>
                     </div>
                     <div class="col-md-3 mb-4">
                         <div class="bg-success text-white rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center
                         proyecto-card">
                             <i class="bi bi-heart"></i>
                         </div>
-                        <h5>100 horas de voluntariado 2026</h5>
+                        <h3>100 horas de voluntariado 2026</h3>
                     </div>
                     <div class="col-md-3 mb-4">
                         <div class="bg-warning text-dark rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center
                         proyecto-card">
                             <i class="bi bi-people" width="50"></i>
                         </div>
-                        <h5>Huertos urbanos locales</h5>
+                        <h3>Huertos urbanos locales</h3>
                     </div>
                     <div class="col-md-3 mb-4">
                         <div class="bg-info text-white rounded-circle mx-auto mb-3 d-flex align-items-center justify-content-center
                         proyecto-card">
                             <i class="bi bi-book" width="50"></i>
                         </div>
-                        <h5>Mentorías gratuitas</h5>
+                        <h3>Mentorías gratuitas</h3>
                     </div>
                 </div>
                 <div class="text-center mt-4">
