--- a/src/contactos.html
+++ b/src/contactos.html
@@ -16,14 +16,14 @@
     <!-- Navbar-->
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
-            <a class="navbar-brand fw-bold py-2" href="./index.html">Vive con Propósito</a>
+            <a class="navbar-brand fw-bold py-2" href="./index.html"><h1>Vive con Propósito</h1></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navPrincipal"
                 aria-controls="navPrincipal" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navPrincipal">
                 <ul class="navbar-nav ms-auto ">
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="./index.html#">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="./index.html#nosotros">Sobre nosotros</a></li>
                     <li class="nav-item"><a class="nav-link" href="./index.html#recursos">Recursos</a></li>
                     <li class="nav-item"><a class="nav-link" href="./index.html#proyectos">Proyectos</a></li>
@@ -40,7 +40,7 @@
                 <div class="row justify-content-center align-items-center g-4">
                     <!-- Texto -->
                     <div class="col-lg-5 col-md-10 text-center text-lg-start">
-                        <h3 class="fw-semibold mb-3">Estamos aquí para ayudarte</h3>
+                        <h2 class="fw-semibold mb-3">Estamos aquí para ayudarte</h2>
                         <p class="lead">
                             Nuestro equipo de acompañamiento está disponible para orientarte y escucharte.
                             Cuéntanos cómo podemos ayudarte, y te responderemos en la brevedad posible.
